--- a/index.html
+++ b/index.html
@@ -461,6 +461,43 @@
         .speaker-button.paused i {
             transform: rotate(180deg);
         }
+
+        /* --- Estilos para o Crédito de Desenvolvimento --- */
+        .dev-credit {
+          margin-top: 1rem;
+          font-size: 0.9rem;
+          color: #ccc; /* Cor do texto, ideal para rodapés escuros */
+          text-align: center;
+          font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+        }
+
+        .beating-heart {
+          display: inline-block;
+          color: #e74c3c; /* Cor vermelha para o coração */
+          animation: beat 1.2s infinite cubic-bezier(0.215, 0.61, 0.355, 1);
+        }
+
+        .dev-credit a {
+          color: #fff; /* Cor do link, ideal para rodapés escuros */
+          font-weight: 600;
+          text-decoration: none;
+          transition: color 0.3s ease;
+        }
+
+        .dev-credit a:hover {
+          color: #3498db; /* Cor do link ao passar o mouse (azul claro) */
+          text-decoration: underline;
+        }
+
+        /* --- Animação do Coração Pulsando --- */
+        @keyframes beat {
+          0%, 30%, 60%, 100% {
+            transform: scale(1);
+          }
+          15%, 45% {
+            transform: scale(1.3);
+          }
+        }
     </style>
 </head>
 <body>
@@ -899,6 +936,9 @@
 <footer>
     <p>&copy; 2024 <strong>MultiA Eletric</strong> - Scooters Sustentáveis. Todos os direitos reservados.</p>
     <p>[Dados do Cliente] | Joinville/SC | <a href="https://www.instagram.com/multiaeletric/" style="color: var(--gold);">Siga no Instagram</a></p>
+    <div class="dev-credit">
+      Site desenvolvido com <span class="beating-heart">❤️</span> por <a href="https://www.arcalabs.com.br/" target="_blank" rel="noopener noreferrer">Arca</a>
+    </div>
 </footer>
 
 <script>
