--- a/index.html
+++ b/index.html
@@ -935,7 +935,7 @@
 <!-- FOOTER - Navy com Gold -->
 <footer>
     <p>&copy; 2024 <strong>MultiA Eletric</strong> - Scooters Sustentáveis. Todos os direitos reservados.</p>
-    <p>[Dados do Cliente] | Joinville/SC | <a href="https://www.instagram.com/multiaeletric/" style="color: var(--gold);">Siga no Instagram</a></p>
+    <p> @multiaeletric | Joinville/SC | <a href="https://www.instagram.com/multiaeletric/" style="color: var(--gold);">Siga no Instagram</a></p>
     <div class="dev-credit">
       Site desenvolvido com <span class="beating-heart">❤️</span> por <a href="https://www.arcalabs.com.br/" target="_blank" rel="noopener noreferrer">Arca</a>
     </div>
@@ -1228,3 +1228,4 @@
 
 </body>
 </html>
+
